--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "routine-planner-api",
   "version": "1.0.0",
   "description": "Routine Planner Application#Routine Planner",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
-    "start": " index.js",
-    "start:debug": "nodemon index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": " app.js",
+    "start:debug": "nodemon app.js",
+    "test": "jest"
   },
   "author": "Belayet Hossen",
   "license": "ISC",
@@ -17,13 +17,13 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.1",
     "express-validator": "^7.0.1",
-    "jest": "^29.7.0",
     "joi": "^17.12.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.2.3",
     "supertest": "^6.3.4"
   },
   "devDependencies": {
+    "jest": "^29.7.0",
     "nodemon": "^3.1.0"
   }
 }
